--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
