--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
+    "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-player": "^2.16.0",
     "react-redux": "^9.2.0",
